--- a/R/031_Bulk_DEAnalysis.qmd
+++ b/R/031_Bulk_DEAnalysis.qmd
@@ -2,8 +2,10 @@
 title: "Bulk-Seq Analysis for Microglial cells"
 author: "Jieran Sun"
 format: html
-editor: visual
+editor: source
 ---
+
+# Preamble
 
 ## Loading libraries
 
@@ -21,7 +23,7 @@ suppressPackageStartupMessages({
 ## Load data
 
 ```{r}
-dt <- fread("~/Microglial/Data/231124_SuzanneWolf_feature_counts")
+dt <- fread("../Data/231124_SuzanneWolf_feature_counts")
 geneDF <- dt[, 1, drop=FALSE]
 countDF <- as.data.frame(dt[, 7:ncol(dt)])
 
@@ -33,6 +35,9 @@ rownames(countDF) <- geneDF$Geneid
 group <- rep(c("KO", "WT"), each = 5)
 group <- as.factor(group)
 names(group) <- sampleID
+
+sample_list <- c(21:30)
+names(sample_list) <- sampleID
 ```
 
 ```{r construct DGE list object for DE-seq analysis}
@@ -54,7 +59,7 @@ y <- y[!is.na(y$genes$Symbol), ]
 # y <- y[y$genes$Symbol != "Gpnmb",]
 ```
 
-## Quality Control
+# Quality Control
 
 Quality control: Percentage of sequencing mapped to the genome
 
@@ -80,14 +85,19 @@ AveLogCPM <- aveLogCPM(y)
 hist(AveLogCPM)
 ```
 
-## Differential Analysis
+# All DESeq calculation
 
-```{r normal cases}
+> Before jumping into individual processing case, remember to run the processing block!!
+
+```{r process data}
 matSave <- y$counts
 rownames(matSave) <- make.names(y$genes$Symbol, unique = TRUE)
 
 y$samples$random <- rep(c("group1", "group2"), 5)
+y$samples$sample <- c(21:30)
+```
 
+```{r normal cases}
 dds <- DESeqDataSetFromMatrix(countData = matSave,
                               colData = y$samples,
                               design= ~ group)
@@ -110,139 +120,60 @@ res_rand <- lfcShrink(dds_rand, coef="random_group2_vs_group1", type="apeglm")
 ```
 
 ```{r subset cases}
-y_sub <- y[, c("SBR_F49_0022_P22_V11", "SBR_F49_0024_P22_V11", "SBR_F49_0025_P22_V11", "SBR_F49_0026_P22_V11", "SBR_F49_0028_P22_V11", "SBR_F49_0029_P22_V11")]
+y_sub <- y[, c("SBR_F49_0022_P22_V11", "SBR_F49_0024_P22_V11", "SBR_F49_0025_P22_V11", 
+               "SBR_F49_0026_P22_V11", "SBR_F49_0029_P22_V11", "SBR_F49_0030_P22_V11")]
 
-matSave <- y_sub
+matSave <- y_sub$counts
 rownames(matSave) <- make.names(y_sub$genes$Symbol, unique = TRUE)
-
-y_sub$samples$group <- rep(c("group1", "group2"), each=3)
 
 dds_sub <- DESeqDataSetFromMatrix(countData = matSave,
                               colData = y_sub$samples,
                               design= ~ group)
 dds_sub <- DESeq(dds_sub)
 
-res_sub <- results(dds_sub, name="group_group2_vs_group1")
+res_sub <- results(dds_sub, name="group_WT_vs_KO")
 # or to shrink log fold changes association with condition:
-res_sub <- lfcShrink(dds_sub, coef="group_group2_vs_group1", type="apeglm")
+res_sub <- lfcShrink(dds_sub, coef="group_WT_vs_KO", type="apeglm")
 ```
 
-## Visualization: Random
+```{r case remove 28}
+y_no28 <- y[, setdiff(colnames(y), c(#"SBR_F49_0022_P22_V11", 
+                                     "SBR_F49_0028_P22_V11"))]
 
-```{r MA plot random}
-resDF_rand <- as.data.frame(res_rand)
-resDF_rand <- resDF_rand[!is.na(resDF_rand$padj), ]
-resDF_rand$Symbol <- rownames(resDF_rand)
+matSaveNo28 <- y_no28$counts
+rownames(matSaveNo28) <- make.names(y_no28$genes$Symbol, unique = TRUE)
 
-maPlotDESeq_rand <- ggplot(resDF_rand, aes(x = baseMean, y = log2FoldChange)) + 
-  geom_point(aes(color = padj < 0.05)) + 
-  #geom_hline(yintercept = -log10(0.05)) + 
-  geom_text_repel(data=resDF_rand[resDF_rand$baseMean > 4 & abs(resDF_rand$log2FoldChange) > 1, ], 
-                  aes(x = baseMean, y = log2FoldChange, label = Symbol)) + 
-  scale_color_manual(values = c("grey", "blue")) +
-  theme_bw()
-
-maPlotDESeq_rand
-```
-
-```{r volcano plot random}
-resDF_rand$isDEG <- resDF_rand$padj < 0.05
-
-volPlotDESeq_rand <- ggplot(resDF_rand, aes(x = log2FoldChange, y = -log10(padj))) + 
-  geom_point(aes(color = isDEG)) + 
-  geom_hline(yintercept = -log10(0.05)) + 
-  geom_text_repel(data=resDF_rand[resDF_rand$padj < 0.05 & abs(resDF_rand$log2FoldChange) > 0.2, ], 
-                  aes(x = log2FoldChange, y = -log10(padj), label = Symbol)) + 
-  scale_color_manual(values = c("grey", "blue")) 
-
-volPlotDESeq_rand
-```
-
-```{r DESeq barplot}
-keyGenes_rand <- as.data.table(resDF_rand)[order(padj), Symbol][1:8] #[-5]
-
-keyGeneDT_rand <- as.data.table(y$counts[y$genes$Symbol %in% keyGenes_rand, ], keep.rownames = "gene")[, gene := y$genes[gene, "Symbol"]]
-keyGeneDT_rand <- melt(keyGeneDT_rand, id.vars = "gene", variable.name = "sample", value.name = "counts")[, group := group[sample]][, gene := factor(gene, levels = keyGenes_rand)][]
-
-bp_rand <- ggplot(keyGeneDT_rand, aes(x = "gene", y = counts, fill = group)) + 
-  geom_boxplot(outlier.alpha = 0) + geom_jitter(aes(color = group), alpha = 0.5) + 
-  facet_wrap(~gene, nrow = 1) + 
-  theme_minimal() + 
-  theme(axis.title.x = element_blank())
-
-bp_rand
-```
-
-## Visualization: Subset
-
-```{r MA plot}
-resDF_sub <- as.data.frame(res_sub)
-resDF_sub <- resDF_sub[!is.na(resDF_sub$padj), ]
-resDF_sub$Symbol <- rownames(resDF_sub)
-
-maPlotDESeq_sub <- ggplot(resDF_sub, aes(x = baseMean, y = log2FoldChange)) + 
-  geom_point(aes(color = padj < 0.05)) + 
-  #geom_hline(yintercept = -log10(0.05)) + 
-  geom_text_repel(data=resDF_sub[resDF_sub$baseMean > 4 & abs(resDF_sub$log2FoldChange) > 1, ], 
-                  aes(x = baseMean, y = log2FoldChange, label = Symbol)) + 
-  scale_color_manual(values = c("grey", "blue")) +
-  theme_bw()
-
-maPlotDESeq_sub
-```
-
-
-```{r volcano plot}
-resDF_sub$isDEG <- resDF_sub$padj < 0.05
-
-volPlotDESeq_sub <- ggplot(resDF_sub, aes(x = log2FoldChange, y = -log10(padj))) + 
-  geom_point(aes(color = isDEG)) + 
-  geom_hline(yintercept = -log10(0.05)) + 
-  geom_text_repel(data=resDF_sub[resDF_sub$padj < 0.05 & abs(resDF_sub$log2FoldChange) > 0.2, ], 
-                  aes(x = log2FoldChange, y = -log10(padj), label = Symbol)) + 
-  scale_color_manual(values = c("grey", "blue")) 
-
-volPlotDESeq_sub
-```
-
-```{r DESeq barplot}
-keyGenes_sub <- as.data.table(resDF_sub)[order(padj), Symbol][1:8] #[-5]
-
-keyGeneDT_sub <- as.data.table(y$counts[y$genes$Symbol %in% keyGenes_sub, ], keep.rownames = "gene")[, gene := y$genes[gene, "Symbol"]]
-keyGeneDT_sub <- melt(keyGeneDT_sub, id.vars = "gene", variable.name = "sample", value.name = "counts")[, group := group[sample]][, gene := factor(gene, levels = keyGenes_sub)][]
-
-bp_sub <- ggplot(keyGeneDT_sub, aes(x = "gene", y = counts, fill = group)) + 
-  geom_boxplot(outlier.alpha = 0) + geom_jitter(aes(color = group), alpha = 0.5) + 
-  facet_wrap(~gene, nrow = 1) + 
-  theme_minimal() + 
-  theme(axis.title.x = element_blank())
-
-bp_sub
-```
-
-## DEseq: All
-
-```{r quick run of DESeq2}
-matSave <- y$counts
-rownames(matSave) <- make.names(y$genes$Symbol, unique = TRUE)
-
-dds <- DESeqDataSetFromMatrix(countData = matSave,
-                              colData = y$samples[, "group", drop=FALSE],
+dds_no28 <- DESeqDataSetFromMatrix(countData = matSaveNo28,
+                              colData = y_no28$samples,
                               design= ~ group)
-dds <- DESeq(dds)
+dds_no28 <- DESeq(dds_no28)
 
-res <- results(dds, name="group_WT_vs_KO")
+res_no28 <- results(dds_no28, name="group_WT_vs_KO")
 # or to shrink log fold changes association with condition:
-res <- lfcShrink(dds, coef="group_WT_vs_KO", type="apeglm")
+res_no28 <- lfcShrink(dds_no28, coef="group_WT_vs_KO", type="apeglm")
 ```
 
-```{r MA plot}
-resDF <- as.data.frame(res)
+```{r PCA visualization}
+dds_norm <- rlog(dds_no28)
+plotPCA(dds_norm, intgroup = "group") + geom_label(aes(label=dds_norm$sample))
+```
+
+# Visualization
+
+Change the first block from below to identify which sample/case do you want to focus on.
+
+```{r select which results to visualize}
+res_visual <- res_no28
+
+resDF <- as.data.frame(res_visual)
 resDF <- resDF[!is.na(resDF$padj), ]
 resDF$Symbol <- rownames(resDF)
+resDF$isDEG <- resDF$padj < 0.05
+```
 
+```{r MA plot random}
 maPlotDESeq <- ggplot(resDF, aes(x = baseMean, y = log2FoldChange)) + 
-  geom_point(aes(color = padj < 0.05)) + 
+  geom_point(aes(color = isDEG)) + 
   #geom_hline(yintercept = -log10(0.05)) + 
   geom_text_repel(data=resDF[resDF$baseMean > 4 & abs(resDF$log2FoldChange) > 1, ], 
                   aes(x = baseMean, y = log2FoldChange, label = Symbol)) + 
@@ -252,13 +183,7 @@ maPlotDESeq <- ggplot(resDF, aes(x = baseMean, y = log2FoldChange)) +
 maPlotDESeq
 ```
 
-
-```{r volcano plot}
-resDF <- as.data.frame(res)
-resDF <- resDF[!is.na(resDF$padj), ]
-resDF$Symbol <- rownames(resDF)
-resDF$isDEG <- resDF$padj < 0.05
-
+```{r volcano plot random}
 volPlotDESeq <- ggplot(resDF, aes(x = log2FoldChange, y = -log10(padj))) + 
   geom_point(aes(color = isDEG)) + 
   geom_hline(yintercept = -log10(0.05)) + 
@@ -269,32 +194,50 @@ volPlotDESeq <- ggplot(resDF, aes(x = log2FoldChange, y = -log10(padj))) +
 volPlotDESeq
 ```
 
-```{r DESeq barplot}
-keyGenes <- as.data.table(resDF)[padj < 0.05, ][order(padj), Symbol] #[-5]
+```{r DESeq genes expression}
+# Select out all the DEGs
+n_deg <- sum(resDF$isDEG)
+keyGenes <- as.data.table(resDF)[isDEG==TRUE, ][order(-abs(log2FoldChange)), Symbol]
 
-keyGeneDT <- as.data.table(y$counts[y$genes$Symbol %in% keyGenes, ], keep.rownames = "gene")[, gene := y$genes[gene, "Symbol"]]
-keyGeneDT <- melt(keyGeneDT, id.vars = "gene", variable.name = "sample", value.name = "counts")[, group := group[sample]][, gene := factor(gene, levels = keyGenes)][]
+# Generated CPM 
+y <- calcNormFactors(y)
+y_lcpm <- edgeR::cpm(y, log = TRUE)
+y_cpm <- edgeR::cpm(y, log = FALSE)
+y_raw <- y$counts
 
-bp <- ggplot(keyGeneDT, aes(x = "gene", y = counts, fill = group)) + 
-  geom_boxplot(outlier.alpha = 0) + geom_jitter(aes(color = group), alpha = 0.5) + 
-  facet_wrap(~gene, nrow = 1) + 
+# Filter key genes
+degDF <- as.data.table(y_raw)[, gene:= make.names(y$genes$Symbol, unique = TRUE)
+                               ][gene %in% keyGenes, ]
+```
+
+```{r}
+# Extract the 
+degPlotDF <- melt(degDF, id.vars = "gene", 
+                  variable.name = "sample_ID", 
+                  value.name = "counts")[, group := group[sample_ID]
+                                         ][, sample := sample_list[sample_ID]
+                                           ][, gene := factor(gene, levels = keyGenes)]
+
+bp_rand <- ggplot(degPlotDF, aes(x = "gene", y = counts, fill = group)) + 
+  geom_boxplot(outlier.alpha = 0) + 
+  geom_text(aes(label = sample, color = group), alpha = 0.9, size = 3, position = position_jitter(seed = 1)) + 
+  facet_wrap(~gene, nrow = 2) + 
   theme_minimal() + 
   theme(axis.title.x = element_blank())
 
-bp
+bp_rand
 ```
 
-## Epilog
-
+# Epilog
 
 ```{r save data}
 matSave <- y$counts
 rownames(matSave) <- make.names(y$genes$Symbol, unique = TRUE)
-write.csv2(matSave, "~/Microglial/Data/filteredCounts.csv")
+write.csv2(matSave, "../Data/031_Bulk_filteredCounts.csv")
+write.csv2(res_no28[order(res_no28$padj),], "../Data/DEG_Bulk_no28.csv")
+saveRDS(y, "../Data/031_DGEList.rds")
 ```
-
 
 ```{r check information}
 sessionInfo()
 ```
-
